--- a/index.html
+++ b/index.html
@@ -21,17 +21,7 @@
           <th>状態</th>
         </tr>
       </thead>
-      <tbody id="task-table">
-
-      </tbody>
-
-      <tbody id="work-table">
-
-      </tbody>
-
-      <tbody id="finish-table">
-
-      </tbody>
+      <tbody id="task-table"></tbody>
     </table>
     <h1>新規タスクの追加</h1>
     <input class="add" id="task-value" type="text"><input type="button" id="task-trigger" value="追加">
